fix: change description text-align

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .description {
   font-size: 10px;
   font-weight: 400;
-  text-align: justify;
+  text-align: left;
 }
 
 @media (max-width: 991px) {
